4.3.0: improved meshing of surfaces with singular parametrizations; added API
support for aliasing and combining views, copying view options, setting point
coordinates and extruding built-in CAD entities along normals; fixed regression
introduced in 4.1.4 that could lead to non-deterministic 2D meshes; small bug
fixes.

4.2.3 (April 3, 2019): added STL export by physical surface; added ability to
remove embedded entities; added handling of boundary entities in
addDiscreteEntity; small bug fixes.

4.2.2 (March 13, 2019): fixed regression in reading of extruded meshes; added
ability to export one solid per surface in STL format.

4.2.1 (March 7, 2019): fixed regression for STEP files without global compound
shape; added support for reading IGES labels and colors; improved search for
shared library in Python and Julia modules; improved Plugin(MeshVolume); updates
to the reference manual.

4.2.0 (March 5, 2019): changed type of node and element tags in API to support
(very) large meshes (using size_t instead of int); new MSH4.1 revision of the
MSH file format, with support for size_t node and element tags (see the
reference manual for detailed changes); changed the logger, getPeriodicNodes and
setElementsByType API; added support for reading STEP labels and colors with OCC
CAF; changed default "General.OCCTargetUnit" value to none (i.e. use STEP file
coordinates as-is, without conversion); improved high-order mesh optimization;
added ability to import groups of nodes from MED files; extruded meshes now
fill-in periodic node information; enhanced Plugin(Distance) and
Plugin(SimplePartition); removed unmaintained plugins; removed default
dependency on PETSc; small improvements and bug fixes.

4.1.5 (February 14, 2019): improved OpenMP parallelization, STL remeshing, mesh
partitioning and high-order mesh optimization; added classifySurfaces in API;
bug fixes.

4.1.4 (February 3, 2019): improved ghost cell I/O; added getGhostElements,