@@ -2822,6 +2822,44 @@ entities of dimension 0 (points) are handled.
 -
 @end table
 
+@item getMass
+Get the mass of the model entity of dimension @code{dim} and tag @code{tag}.
+
+@table @asis
+@item Input:
+@code{dim}, @code{tag}
+@item Output:
+@code{mass}
+@item Return:
+-
+@end table
+
+@item getCenterOfMass
+Get the center of mass of the model entity of dimension @code{dim} and tag
+@code{tag}.
+
+@table @asis
+@item Input:
+@code{dim}, @code{tag}
+@item Output:
+@code{x}, @code{y}, @code{z}
+@item Return:
+-
+@end table
+
+@item getMatrixOfInertia
+Get the matrix of inertia (by row) of the model entity of dimension @code{dim}
+and tag @code{tag}.
+
+@table @asis
+@item Input:
+@code{dim}, @code{tag}
+@item Output:
+@code{mat}
+@item Return:
+-
+@end table
+
 @item synchronize
 Synchronize the internal OpenCASCADE CAD representation with the current Gmsh
 model. This can be called at any time, but since it involves a non trivial
